# calibmar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.gitlab-ci/: build-ubuntu.yaml  build-windows.yaml
cmake/: package.cmake
data/validation/: README.md
doc/: Makefile  conf.py  requirements.txt
doc/_templates/: version.html
doc/source/: bibliography.md  calibration_report_format.md  calibration_targets.md  camera_calibration.md  housing_calibration.md  index.md  installation.md  introduction.md  license.md  should_i_calibrate_my_housing.md  stereo_calibration.md
docker/: Dockerfile
docker/ubuntu/: Dockerfile
docker/windows/: Dockerfile
lib/: README.md
lib/colmap/: CMakeLists.txt  README.md
src/app/: main.cpp
src/calibmar/: CMakeLists.txt  version.h.in
src/calibmar/calibrators/: CMakeLists.txt  basic_calibrator.cpp  basic_calibrator.h  calibrator.cpp  calibrator.h  calibrator3D.cpp  calibrator3D.h  colmap_calibration.cpp  colmap_calibration.h  general_calibration.cpp  general_calibration.h  housing_calibrator.cpp  housing_calibrator.h  non_svp_calibration.cpp  non_svp_calibration.h  opencv_calibration.cpp  opencv_calibration.h  stereo_calibration.cpp  stereo_calibration.h  stereo_calibrator.cpp  stereo_calibrator.h
src/calibmar/core/: CMakeLists.txt  calibration.cpp  calibration.h  calibration_targets.h  camera_models.h  image.h  natural_sort.h  pixmap.cpp  pixmap.h  report.cpp  report.h  undistort.cpp  undistort.h
src/calibmar/extractors/: CMakeLists.txt  aruco_board_extractor.cpp  aruco_board_extractor.h  aruco_sift_extractor.cpp  aruco_sift_extractor.h  chessboard_extractor.cpp  chessboard_extractor.h  extractor.h  sift_extractor.cpp  sift_extractor.h
src/calibmar/pose_suggestion/: CMakeLists.txt  aruco_3D_target_tracker.cpp  chessboard_target_tracker.cpp  pose_suggestion.cpp  target_tracker.cpp  target_tracker.h
src/calibmar/readers/: filesystem_reader.cpp  filesystem_reader.h
tests/: CMakeLists.txt  tests.cpp
tests/calibrators/: CMakeLists.txt  basic_calibrator_test.cpp  calibrator_test.cpp  housing_calibrator_test.cpp  stereo_calibration_test.cpp  stereo_calibrator_test.cpp
tests/evaluation/: eval.cpp
tests/extractors/: CMakeLists.txt  (+2 more)
(+907 files in other folders)
